from typing import List, Dict, Optional
import torch
from transformers import BertTokenizer, BertModel
from sklearn.ensemble import RandomForestClassifier
import numpy as np
import networkx as nx
from dataclasses import dataclass
import logging
from datetime import datetime

logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

@dataclass
class AnalysisResult:
    """分析結果"""
    timestamp: datetime
    root_cause: str
    confidence: float
    affected_components: List[str]
    recommendations: List[Dict]
    evidence: Dict
    severity: str

class PatternAnalyzer:
    def __init__(self, known_patterns: Dict):
        """
        パターン分析クラス
        Args:
            known_patterns: 既知のパターン辞書
        """
        self.known_patterns = known_patterns

    def analyze_patterns(self, data: Dict) -> List[Dict]:
        """パターンの分析"""
        try:
            matches = []
            for pattern_name, pattern in self.known_patterns.items():
                confidence = self._calculate_confidence(data, pattern)
                if confidence > 0:
                    matches.append({
                        'pattern': pattern_name,
                        'confidence': confidence,
                        'matches': self._rank_matches(data, pattern)
                    })
            return sorted(matches, key=lambda x: x['confidence'], reverse=True)
        except Exception as e:
            logger.error(f"Error in pattern analysis: {e}")
            raise

    def _calculate_confidence(self, data: Dict, pattern: Dict) -> float:
        """信頼度の計算"""
        matched_features = 0
        total_features = len(pattern['features'])
        
        for feature, value in pattern['features'].items():
            if feature in data and self._match_pattern(data[feature], value):
                matched_features += 1
                
        return matched_features / total_features

    def _match_pattern(self, value: Any, pattern: Any) -> bool:
        """パターンマッチング"""
        if isinstance(pattern, dict) and 'range' in pattern:
            return pattern['range'][0] <= value <= pattern['range'][1]
        return value == pattern

    def _rank_matches(self, data: Dict, pattern: Dict) -> List[Dict]:
        """マッチングのランク付け"""
        return sorted(
            [
                {
                    'feature': feature,
                    'actual': data.get(feature),
                    'expected': value
                }
                for feature, value in pattern['features'].items()
            ],
            key=lambda x: abs(x['actual'] - x['expected'])
            if isinstance(x['actual'], (int, float)) else 0,
            reverse=True
        )

class MetricsAnalyzer:
    def __init__(self, correlation_threshold: float, window_size: int):
        """
        メトリクス分析クラス
        Args:
            correlation_threshold: 相関閾値
            window_size: 分析ウィンドウサイズ
        """
        self.correlation_threshold = correlation_threshold
        self.window_size = window_size

    def analyze_correlations(self, metrics: Dict) -> Dict:
        """相関分析の実行"""
        try:
            correlation_matrix = self._calculate_correlation_matrix(metrics)
            anomaly_sequences = self._detect_anomaly_sequence(metrics)
            patterns = self._identify_metric_patterns(metrics)
            
            return {
                'correlation_matrix': correlation_matrix,
                'anomaly_sequences': anomaly_sequences,
                'patterns': patterns
            }
        except Exception as e:
            logger.error(f"Error in metrics analysis: {e}")
            raise

    def _calculate_correlation_matrix(self, metrics: Dict) -> np.ndarray:
        """相関行列の計算"""
        metric_values = np.array([
            metrics[key] for key in metrics.keys()
        ])
        return np.corrcoef(metric_values)

class LogAnalyzer:
    def __init__(self, bert_model: BertModel, tokenizer: BertTokenizer):
        """
        ログ分析クラス
        Args:
            bert_model: BERTモデル
            tokenizer: BERTトークナイザー
        """
        self.bert_model = bert_model
        self.tokenizer = tokenizer

    def analyze_logs(self, logs: List[str]) -> Dict:
        """ログの分析"""
        try:
            encoded_logs = self._encode_logs(logs)
            clusters = self._cluster_logs(encoded_logs)
            patterns = self._extract_patterns(clusters)
            temporal = self._temporal_analysis(logs)
            
            return {
                'clusters': clusters,
                'patterns': patterns,
                'temporal_analysis': temporal
            }
        except Exception as e:
            logger.error(f"Error in log analysis: {e}")
            raise

    def _encode_logs(self, logs: List[str]) -> torch.Tensor:
        """ログのエンコード"""
        tokenized = self.tokenizer(
            logs,
            padding=True,
            truncation=True,
            return_tensors='pt'
        )
        with torch.no_grad():
            outputs = self.bert_model(**tokenized)
        return outputs.last_hidden_state[:, 0, :]

class DependencyAnalyzer:
    def __init__(self, dependency_graph: nx.DiGraph):
        """
        依存関係分析クラス
        Args:
            dependency_graph: 依存関係グラフ
        """
        self.dependency_graph = dependency_graph

    def analyze_dependencies(self, affected_components: List[str]) -> Dict:
        """依存関係の分析"""
        try:
            impact = self._propagate_impact(affected_components)
            critical_paths = self._identify_critical_paths(affected_components)
            ranked_components = self._rank_components(impact)
            
            return {
                'impact': impact,
                'critical_paths': critical_paths,
                'ranked_components': ranked_components
            }
        except Exception as e:
            logger.error(f"Error in dependency analysis: {e}")
            raise

class AIRecommender:
    def __init__(self, model: Any, historical_data: Dict):
        """
        AI推論クラス
        Args:
            model: 機械学習モデル
            historical_data: 履歴データ
        """
        self.model = model
        self.historical_data = historical_data

    def generate_recommendations(self) -> List[Dict]:
        """推奨事項の生成"""
        try:
            recommendations = self._rank_solutions()
            effectiveness = self._evaluate_effectiveness(recommendations)
            
            return [
                {
                    'solution': rec,
                    'effectiveness': eff,
                    'confidence': self._calculate_confidence(rec)
                }
                for rec, eff in zip(recommendations, effectiveness)
            ]
        except Exception as e:
            logger.error(f"Error generating recommendations: {e}")
            raise

class AnalysisService:
    def __init__(self,
                 bert_model: BertModel,
                 bert_tokenizer: BertTokenizer,
                 rf_classifier: RandomForestClassifier,
                 known_patterns: Dict,
                 dependency_graph: nx.DiGraph):
        """
        分析サービス
        Args:
            bert_model: BERTモデル
            bert_tokenizer: BERTトークナイザー
            rf_classifier: Random Forestモデル
            known_patterns: 既知のパターン
            dependency_graph: 依存関係グラフ
        """
        self.pattern_analyzer = PatternAnalyzer(known_patterns)
        self.metrics_analyzer = MetricsAnalyzer(correlation_threshold=0.7, window_size=60)
        self.log_analyzer = LogAnalyzer(bert_model, bert_tokenizer)
        self.dependency_analyzer = DependencyAnalyzer(dependency_graph)
        self.ai_recommender = AIRecommender(rf_classifier, {})

    def analyze_root_cause(self,
                         anomaly_data: Dict,
                         system_logs: List[str],
                         metrics_history: Dict) -> AnalysisResult:
        """
        根本原因分析の実行
        Args:
            anomaly_data: 異常データ
            system_logs: システムログ
            metrics_history: メトリクス履歴
        Returns:
            AnalysisResult: 分析結果
        """
        try:
            # パターン分析
            pattern_results = self.pattern_analyzer.analyze_patterns(anomaly_data)
            
            # メトリクス相関分析
            metrics_results = self.metrics_analyzer.analyze_correlations(metrics_history)
            
            # ログ分析
            log_results = self.log_analyzer.analyze_logs(system_logs)
            
            # 依存関係分析
            dependency_results = self.dependency_analyzer.analyze_dependencies(
                anomaly_data.get('affected_components', [])
            )
            
            # 結果の統合
            integrated_results = self._integrate_analysis_results(
                pattern_results,
                metrics_results,
                log_results,
                dependency_results
            )
            
            # 推奨事項の生成
            recommendations = self.ai_recommender.generate_recommendations()
            
            return AnalysisResult(
                timestamp=datetime.now(),
                root_cause=integrated_results['root_cause'],
                confidence=integrated_results['confidence'],
                affected_components=integrated_results['affected_components'],
                recommendations=recommendations,
                evidence=integrated_results['evidence'],
                severity=integrated_results['severity']
            )
            
        except Exception as e:
            logger.error(f"Error in root cause analysis: {e}")
            raise

    def _integrate_analysis_results(self,
                                  pattern_results: List[Dict],
                                  metrics_results: Dict,
                                  log_results: Dict,
                                  dependency_results: Dict) -> Dict:
        """分析結果の統合"""
        try:
            # 結果の重み付け
            weights = {
                'pattern': 0.3,
                'metrics': 0.25,
                'logs': 0.25,
                'dependency': 0.2
            }
            
            # 統合結果の生成
            integrated = {
                'root_cause': self._determine_root_cause(
                    pattern_results,
                    metrics_results,
                    log_results
                ),
                'confidence': self._calculate_overall_confidence(
                    pattern_results,
                    metrics_results,
                    log_results,
                    weights
                ),
                'affected_components': dependency_results['ranked_components'],
                'evidence': {
                    'patterns': pattern_results,
                    'metrics': metrics_results,
                    'logs': log_results,
                    'dependencies': dependency_results
                },
                'severity': self._determine_severity(pattern_results, metrics_results)
            }
            
            return integrated
            
        except Exception as e:
            logger.error(f"Error integrating analysis results: {e}")
            raise

